@@ -7,6 +7,7 @@ Version 1.94
 	Fixed bug: refreshing gravatar that was already deleted caused an exception
 	Fixed bug: when clicking "dictionary" submenu in spelling checker context menu the current word was replaced
 	Fixed bug: ctrl-a in FileStatusListBox not working
+	Fixed bug: starting "gitextensions init" from the commandline without path causes an exception
 	Added Japanese translation
 	Added option to mark ill formed commit messages
 	Added the ability to move to the prev/next quickseach string by hitting alt+arrowup/alt+arrowdown
